--- a/index.html
+++ b/index.html
@@ -1,68 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Card _ Muhammad Suhaib</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Personal Card _ Muhammad Suhaib</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
-
 <body>
-    <main class="page">
-        <article class="card" role="region" aria-labelledby="card-title">
-            <header class="card__header" aria-hidden="true"></header>
-            <img class="card__avatar" src="image.jpg" alt="Portrait of Muhammad Suhaib" width="128" height="128">
-            <div class="__body">
-                <h1 class="card__name" id="card-title">Muhammad Suhaib</h1>
-                <p class="card__title">Developer | Student — BS CS</p>
-                <p class="card__bio">Passionate about web development, clean UI and exploring Computer Science the right way</p>
-                <ul class="card__tags" aria-label="Skills">
-                    <li class="tag">HTML</li>
-                    <li class="tag">CSS</li>
-                    <li class="tag">JavaScript</li>
-                </ul>
-                <div class="card__actions">
-                    <!-- Portfolio Button -->
-                    <a class="btn btn--primary" href="https://msuhaib26.github.io/Suhaib-resume/" target="_blank"
-                        rel="noopener noreferrer">
-                        Portfolio
-                    </a>
+  <main class="page">
+    <article class="card" role="region" aria-labelledby="card-title">
+      <!-- Avatar ko header ke ANDAR rakha gaya hai -->
+      <header class="card__header" aria-hidden="true">
+        <img
+          class="card__avatar"
+          src="image.jpg"
+          alt="Portrait of Muhammad Suhaib"
+          width="128" height="128"
+        />
+      </header>
 
-                    <!-- Contact Button -->
-                    <a class="btn" href="mailto:muhammadsuhaib524@gmail.com">
-                        Contact
-                    </a>
-                </div>
-                <nav class="card__social" aria-label="Social links">
-                    <a class="icon-link" href="https://github.com/msuhaib26" target="_blank" rel="noopener noreferrer"
-                        aria-label="GitHub">
-                        <!-- GitHub icon (inline SVG) -->
-                        <svg viewBox="0 0 24 24" width="24" height="24" fill="black">
-                            <path
-                                d="M12 .5a11.5 11.5 0 0 0-3.64 22.41c.58.1.8-.25.8-.56v-2c-3.26.7-3.95-1.4-3.95-1.4-.53-1.34-1.3-1.7-1.3-1.7-1.06-.73.08-.72.08-.72 1.17.08 1.79 1.2 1.79 1.2 1.04 1.78 2.72 1.26 3.39.97.11-.76.41-1.26.75-1.55-2.6-.3-5.34-1.3-5.34-5.77 0-1.28.46-2.33 1.2-3.15-.12-.3-.52-1.52.11-3.17 0 0 .98-.31 3.2 1.2a11.1 11.1 0 0 1 5.82 0c2.22-1.51 3.2-1.2 3.2-1.2.63 1.65.23 2.87.11 3.17.75.82 1.2 1.87 1.2 3.15 0 4.48-2.74 5.47-5.36 5.77.42.36.8 1.06.8 2.14v3.17c0 .31.21.67.81.56A11.5 11.5 0 0 0 12 .5Z" />
-                        </svg>
-                    </a>
-                    <a class="icon-link" href="https://www.linkedin.com/in/your-username/muhammad-suhaib26/"
-                        target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
-                        <!-- LinkedIn icon -->
-                        <svg viewBox="0 0 24 24" width="24" height="24" fill="darkblue">
-                            <path
-                                d="M4.98 3.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5ZM3 9h4v12H3V9Zm7 0h3.8v1.7h.05c.53-1 1.85-2.05 3.8-2.05 4.06 0 4.8 2.67 4.8 6.15V21h-4v-5.2c0-1.24-.02-2.84-1.73-2.84-1.74 0-2 1.36-2 2.75V21h-4V9Z" />
-                        </svg>
-                    </a>
-                    <a class="icon-link" href="https://twitter.com/@subi_khan" target="_blank" rel="noopener noreferrer"
-                        aria-label="X (Twitter)">
-                        <!-- X icon -->
-                        <svg viewBox="0 0 24 24" width="24" height="24" fill="blackwhite">
-                            <path
-                                d="M18.9 3H21l-6.51 7.44L22 21h-5.58l-4.37-5.31L6.1 21H4l6.97-7.96L2 3h5.7l4 4.85L18.9 3Zm-1.96 16h1.08L7.14 5h-1.1l10.9 14Z" />
-                        </svg>
-                    </a>
-                </nav>
-            </div>
-        </article>
-    </main>
+      <div class="card__body">
+        <h1 class="card__name" id="card-title">Muhammad Suhaib</h1>
+        <p class="card__title">Developer | Student — BS CS</p>
+        <p class="card__bio">
+          Passionate about web development, clean UI, and exploring Computer Science the right way.
+        </p>
+
+        <ul class="card__tags" aria-label="Skills">
+          <li class="tag">HTML</li>
+          <li class="tag">CSS</li>
+          <li class="tag">JavaScript</li>
+        </ul>
+
+        <div class="card__actions">
+          <a class="btn btn--primary"
+             href="https://msuhaib26.github.io/Suhaib-resume/"
+             target="_blank" rel="noopener noreferrer">Portfolio</a>
+          <a class="btn" href="mailto:muhammadsuhaib524@gmail.com">Contact</a>
+        </div>
+
+        <div class="card__social" aria-label="Social Links">
+          <!-- GitHub -->
+          <a class="icon-link" href="https://github.com" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+            <svg viewBox="0 0 24 24" width="24" height="24" aria-hidden="true" fill="currentColor">
+              <path d="M12 .5A12 12 0 0 0 0 12.7c0 5.4 3.4 10 8.2 11.6.6.1.8-.2.8-.5v-2c-3.3.7-4-1.6-4-1.6-.5-1.2-1.2-1.5-1.2-1.5-1-.7.1-.7.1-.7 1.1.1 1.7 1.2 1.7 1.2 1 1.7 2.6 1.2 3.3.9.1-.8.4-1.3.7-1.6-2.6-.3-5.3-1.3-5.3-5.8 0-1.3.4-2.3 1.2-3.2-.1-.3-.5-1.5.1-3 0 0 1-.3 3.4 1.2a11.6 11.6 0 0 1 6.2 0c2.4-1.5 3.4-1.2 3.4-1.2.6 1.5.2 2.7.1 3 .8.9 1.2 1.9 1.2 3.2 0 4.6-2.7 5.5-5.3 5.8.4.3.8 1 .8 2.1v3c0 .3.2.6.8.5A12 12 0 0 0 24 12.7 12 12 0 0 0 12 .5z"/>
+            </svg>
+          </a>
+
+          <!-- LinkedIn -->
+          <a class="icon-link" href="https://linkedin.com" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
+            <svg viewBox="0 0 24 24" width="24" height="24" aria-hidden="true" fill="currentColor">
+              <path d="M4.98 3.5A2.5 2.5 0 1 0 5 8.5a2.5 2.5 0 0 0 0-5zM3 9h4v12H3V9zm7 0h3.6v1.7h.1c.5-1 1.8-2 3.6-2 3.8 0 4.5 2.5 4.5 5.8V21h-4v-6c0-1.4 0-3.2-2-3.2s-2.2 1.6-2.2 3.1V21h-4V9z"/>
+            </svg>
+          </a>
+
+          <!-- X (Twitter) -->
+          <a class="icon-link" href="https://twitter.com" target="_blank" rel="noopener noreferrer" aria-label="X (Twitter)">
+            <svg viewBox="0 0 24 24" width="24" height="24" aria-hidden="true" fill="currentColor">
+              <path d="M18.9 3H21l-6.51 7.44L22 21h-5.58l-4.37-5.31L6.1 21H4l6.97-7.96L2 3h5.7l4 4.85L18.9 3Zm-1.96 16h1.08L7.14 5h-1.1l10.9 14Z"/>
+            </svg>
+          </a>
+        </div>
+      </div>
+    </article>
+  </main>
 </body>
-
 </html>
